[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Objetos/Puente_completo_vert.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objetos/Puente_incompleto_vert.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Scripts/LogicaPuente.gd" type="Script" id=3]

[node name="PuenteVertical" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="puenteCompleto" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="colisionIzquierda" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17, -41, -12, -41, -12, 41, -17, 41 )
disabled = true

[node name="colisionDerecha" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 12, -41, 17, -41, 17, 41, 12, 41 )
disabled = true

[node name="puenteIncompleto" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="colisionArriba" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17, -41, -17, -4, 17, -4, 17, -41, 12, -41, 12, -5, -12, -5, -12, -41 )

[node name="colisionAbajo" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17, 12, 17, 12, 17, 41, 12, 41, 12, 13, -12, 13, -12, 41, -17, 41 )
